window: make ui shift when there is a width constraint this needs some spacing fixes before merging into master this also updates the default height of the window fixes #45

--- a/src/style.css
+++ b/src/style.css
@@ -11,10 +11,6 @@ game-view, preview, .text-overlay {
   margin: 12px;
 }
 
-.pause-play-button {
-  margin: 30px;
-}
-
 block.shadow {
   opacity: 0.5;
 }
